# swagger/as/external/api/internal.swagger.json
@@ -125,60 +125,6 @@
         ]
       }
     },
-    "/api/internal/devices/summary": {
-      "get": {
-        "summary": "GetDevicesSummary returns an aggregated summary of the devices.",
-        "operationId": "GetDevicesSummary",
-        "responses": {
-          "200": {
-            "description": "A successful response.",
-            "schema": {
-              "$ref": "#/definitions/apiGetDevicesSummaryResponse"
-            }
-          }
-        },
-        "parameters": [
-          {
-            "name": "organizationID",
-            "description": "Organization ID.",
-            "in": "query",
-            "required": false,
-            "type": "string",
-            "format": "int64"
-          }
-        ],
-        "tags": [
-          "InternalService"
-        ]
-      }
-    },
-    "/api/internal/gateways/summary": {
-      "get": {
-        "summary": "GetGatewaysSummary returns an aggregated summary of the gateways.",
-        "operationId": "GetGatewaysSummary",
-        "responses": {
-          "200": {
-            "description": "A successful response.",
-            "schema": {
-              "$ref": "#/definitions/apiGetGatewaysSummaryResponse"
-            }
-          }
-        },
-        "parameters": [
-          {
-            "name": "organizationID",
-            "description": "Organization ID.",
-            "in": "query",
-            "required": false,
-            "type": "string",
-            "format": "int64"
-          }
-        ],
-        "tags": [
-          "InternalService"
-        ]
-      }
-    },
     "/api/internal/login": {
       "post": {
         "summary": "Log in a user",
@@ -251,48 +197,6 @@
             }
           }
         },
-        "tags": [
-          "InternalService"
-        ]
-      }
-    },
-    "/api/internal/search": {
-      "get": {
-        "summary": "Perform a global search.",
-        "operationId": "GlobalSearch",
-        "responses": {
-          "200": {
-            "description": "A successful response.",
-            "schema": {
-              "$ref": "#/definitions/apiGlobalSearchResponse"
-            }
-          }
-        },
-        "parameters": [
-          {
-            "name": "search",
-            "description": "Search query.",
-            "in": "query",
-            "required": false,
-            "type": "string"
-          },
-          {
-            "name": "limit",
-            "description": "Max number of results to return.",
-            "in": "query",
-            "required": false,
-            "type": "string",
-            "format": "int64"
-          },
-          {
-            "name": "offset",
-            "description": "Offset offset of the result-set (for pagination).",
-            "in": "query",
-            "required": false,
-            "type": "string",
-            "format": "int64"
-          }
-        ],
         "tags": [
           "InternalService"
         ]
@@ -377,113 +281,6 @@
         "jwtToken": {
           "type": "string",
           "description": "JWT token for this API Key."
-        }
-      }
-    },
-    "apiGetDevicesSummaryResponse": {
-      "type": "object",
-      "properties": {
-        "activeCount": {
-          "type": "integer",
-          "format": "int64",
-          "description": "Active count."
-        },
-        "inactiveCount": {
-          "type": "integer",
-          "format": "int64",
-          "description": "Inactive count."
-        },
-        "drCount": {
-          "type": "object",
-          "additionalProperties": {
-            "type": "integer",
-            "format": "int64"
-          },
-          "description": "per data-rate count.\nDevices that have never been seen are excluded."
-        },
-        "neverSeenCount": {
-          "type": "integer",
-          "format": "int64",
-          "description": "Never seen count."
-        }
-      }
-    },
-    "apiGetGatewaysSummaryResponse": {
-      "type": "object",
-      "properties": {
-        "activeCount": {
-          "type": "integer",
-          "format": "int64",
-          "description": "Active count."
-        },
-        "inactiveCount": {
-          "type": "integer",
-          "format": "int64",
-          "description": "Inactive count."
-        },
-        "neverSeenCount": {
-          "type": "integer",
-          "format": "int64",
-          "description": "Never seen count."
-        }
-      }
-    },
-    "apiGlobalSearchResponse": {
-      "type": "object",
-      "properties": {
-        "result": {
-          "type": "array",
-          "items": {
-            "$ref": "#/definitions/apiGlobalSearchResult"
-          }
-        }
-      }
-    },
-    "apiGlobalSearchResult": {
-      "type": "object",
-      "properties": {
-        "kind": {
-          "type": "string",
-          "description": "Record kind."
-        },
-        "score": {
-          "type": "number",
-          "format": "float",
-          "description": "Search score."
-        },
-        "organizationID": {
-          "type": "string",
-          "format": "int64",
-          "description": "Organization id."
-        },
-        "organizationName": {
-          "type": "string",
-          "description": "Organization name."
-        },
-        "applicationID": {
-          "type": "string",
-          "format": "int64",
-          "description": "Application id."
-        },
-        "applicationName": {
-          "type": "string",
-          "description": "Application name."
-        },
-        "deviceDevEUI": {
-          "type": "string",
-          "description": "Device DevEUI (hex encoded)."
-        },
-        "deviceName": {
-          "type": "string",
-          "description": "Device name."
-        },
-        "gatewayMAC": {
-          "type": "string",
-          "description": "Gateway MAC (hex encoded)."
-        },
-        "gatewayName": {
-          "type": "string",
-          "description": "Gateway name."
         }
       }
     },
